tests/snapshots/snapshot_tests__contact_visibility.snap
---
source: tests/snapshot_tests.rs
description: ContactDetail → select Visibility
expression: output
---
                          Visibility: Abigale Schroeder

Toggle which fields are visible to this contact.

┌ Field Visibility ────────────────────────────────────────────────────────────┐
│ [x] Email alice@company.com (Work)                                           │
│ [x] Phone +41 79 123 45 67 (Mobile)                                          │
│ [ ] Address  Av. Main, 1, 1000 Lausanne                                      │
└──────────────────────────────────────────────────────────────────────────────┘













[Enter] Save  [?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │ 3 ★ Contacts  │  4 Settings   │    5 Help
