tests/snapshots/snapshot_tests__contacts_empty.snap
---
source: tests/snapshot_tests.rs
assertion_line: 167
expression: output
---
Contacts

────────────────────────────────────────────────────────────────────────────────
                                    Contacts

┌ Contacts ────────────────────────────────────────────────────────────────────┐
│  No contacts yet                                                             │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘










                                 [a] Add Contact

────────────────────────────────────────────────────────────────────────────────
[a] Add Contact  [Esc] back  [q]uit
