tests/snapshots/snapshot_tests__contacts_group_filter_family.snap
---
source: tests/snapshot_tests.rs
expression: output
---
Contacts

────────────────────────────────────────────────────────────────────────────────
                                    Contacts

┌ Contacts ────────────────────────────────────────────────────────────────────┐
│ AS Abigale Schroeder  +1-200-100-1000                                        │
│ AN Ahmed Nikolaus  +1-203-107-1013                                           │
│ AD Andreanne Doyle  +1-206-114-1026                                          │
└──────────────────────────────────────────────────────────────────────────────┘









[a] Add Contact  [Enter] Family  [Enter] Friends  [Enter] Work  [Enter] All Cont

 Filter: Family
[a] Add Contact  [E] Family  [E] Friends  [E] Work  [E] All Contacts  [?] help
    Exchange    │  ★ Contacts   │     Home      │   Settings    │     Help
