tests/snapshots/snapshot_tests__contacts_scrolled.snap
---
source: tests/snapshot_tests.rs
description: Contacts → scroll down to index 5
expression: output
---
                                    Contacts

┌ Contacts (15) ↕ ─────────────────────────────────────────────────────────────┐
│▸ AS Abigale Schroeder  +1-200-100-1000                                       │
│  AN Ahmed Nikolaus  +1-203-107-1013                                          │
│  AD Andreanne Doyle  +1-206-114-1026                                         │
│  AR Andres Raynor  +1-209-121-1039                                           │
│  AH Augusta Heller  +1-212-128-1052                                          │
│  BK Brady Koss  +1-215-135-1065                                              │
│  CG Carmen Gutierrez  +1-218-142-1078                                        │
│  DP Diana Patel  +1-221-149-1091                                             │
└──────────────────────────────────────────────────────────────────────────────┘










[a] Add Contact  [g] Groups  [?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │ 3 ★ Contacts  │  4 Settings   │    5 Help
