tests/snapshots/snapshot_tests__contacts_scrolled_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                                 * Contacts *

┌ Contacts (15) ↕ ───────────────────────────────────── Groups ────────────────┐
│▸ AS Abigale Schroeder  +1-200-100-1000                Family, Work         │ │
│  AN Ahmed Nikolaus  +1-203-107-1013                   Friends              │ │
│  AD Andreanne Doyle  +1-206-114-1026                  Co-Workers           │↕│
│  AR Andres Raynor  +1-209-121-1039                                         │ │
│  AH Augusta Heller  +1-212-128-1052                   Business             │ │
│  BK Brady Koss  +1-215-135-1065                       Work                 │ │
│  CG Carmen Gutierrez  +1-218-142-1078                 Inurances            │ │
│  DP Diana Patel  +1-221-149-1091                      Friends              │ │
└──────────────────────────────────────────────────────────────────────────────┘










                 [g] Groups  [?] help  [Esc] back  [q] quit
  1 Exchange  │ 2 ★ MyInfo  │ 3 Contacts  │ 4 Settings │  5 Help  │  [q] Quit
