tests/snapshots/snapshot_tests__contacts_search_by_email.snap
---
source: tests/snapshot_tests.rs
expression: output
---
                                    Contacts

┌ Contacts ────────────────────────────────────────────────────────────────────┐
│ CG Carmen Gutierrez  +1-218-142-1078                                         │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘














               [a] Add Contact  [g] Family  [g] Friends  [g] Work

[a] Add Contact  [g] Family  [g] Friends  [g] Work  [?] help  [Esc] back
    Exchange    │    MyInfo     │  ★ Contacts   │   Settings    │     Help
