tests/snapshots/snapshot_tests__contacts_with_entries.snap
---
source: tests/snapshot_tests.rs
expression: output
---
Contacts

────────────────────────────────────────────────────────────────────────────────
                                    Contacts

┌ Contacts ────────────────────────────────────────────────────────────────────┐
│ AS Abigale Schroeder  +1-200-100-1000                                        │
│ AN Ahmed Nikolaus  +1-203-107-1013                                           │
│ AD Andreanne Doyle  +1-206-114-1026                                          │
│ AR Andres Raynor  +1-209-121-1039                                            │
│ AH Augusta Heller  +1-212-128-1052                                           │
└──────────────────────────────────────────────────────────────────────────────┘








         [a] Add Contact  [Enter] Family  [Enter] Friends  [Enter] Work

[a] Add Contact  [E] Family  [E] Friends  [E] Work  [?] help  [␛] back  [q] quit
    Exchange    │  ★ Contacts   │     Home      │   Settings    │     Help
